--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
 
 <div class="container">
   <div id="login-screen" class="screen active">
-    <h1>系統登入</h1>
-    <form id="login-form">
+    <h1 id="auth-title">系統登入</h1>
+    <form id="auth-form">
       <div class="input-group">
         <input type="email" id="email-input" placeholder="電子信箱" required>
       </div>
       <div class="input-group">
-        <input type="password" id="password-input" placeholder="密碼" required>
+        <input type="password" id="password-input" placeholder="密碼 (至少6位)" required>
       </div>
-      <button type="submit">登入</button>
-      <div id="login-message"></div>
+      <button type="submit" id="auth-submit-btn">登入</button>
+      <div id="login-message" style="color: red; margin-top: 10px;"></div>
     </form>
+    <div style="text-align: center; margin-top: 15px;">
+      <a href="#" id="toggle-auth" style="color: #2563eb; text-decoration: none;">沒有帳號？前往註冊</a>
+    </div>
   </div>
 
   <div id="vote-screen" class="screen">
     <div class="user-header">
-      <span id="user-email"></span>
+      <span id="user-email" style="font-weight: bold;"></span>
       <button id="logout-button">登出</button>
     </div>
 
@@ -34,22 +37,20 @@
     <form id="vote-form">
       <div id="options-list">
         </div>
-      <button type="submit">送出投票</button>
+      <button type="submit" style="width: 100%; background: #059669;">送出投票</button>
     </form>
 
-    <hr>
-
-    <h3>新增選項</h3>
-    <div class="new-option-row">
-      <input type="text" id="new-option-input" placeholder="輸入新選項...">
-      <button id="add-option-button">新增</button>
+    <div id="admin-only-section" style="display: none; border-top: 2px solid #e5e7eb; margin-top: 20px; padding-top: 10px;">
+      <h3 style="color: #dc2626;">管理員控制面板</h3>
+      <div class="new-option-row" style="display: flex; gap: 8px;">
+        <input type="text" id="new-option-input" placeholder="輸入新選項..." style="flex: 1; padding: 8px; border: 1px solid #ddd; border-radius: 4px;">
+        <button id="add-option-button" style="margin-top: 0; background: #4b5563;">新增</button>
+      </div>
     </div>
 
-    <hr>
-
-    <h3>目前結果</h3>
-    <ul id="results">
-      </ul>
+    <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
+    <h3>目前票數統計</h3>
+    <ul id="results" style="list-style: none; padding: 0;"></ul>
   </div>
 </div>
 
